--- a/TP2/index.html
+++ b/TP2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
+    <title>PixelSteam</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,8 +92,7 @@
                     <img src="icons/logo.svg" alt="">
                 </div>
             </div>
-            <ul id="breadcrumbs">
-            </ul>
+
             <div class="navbar-search">
                     <input type="text" placeholder="Buscar...">
                 <img src="icons/search.svg" class="search-button" alt="search"/>
@@ -103,6 +102,8 @@
                 <button class="cart-button"><i class="fa-solid fa-cart-shopping fa-2x" style="color: #f5ecfe;"></i></button>
             </div>
         </nav>
+        <ul id="breadcrumbs">
+        </ul>
     </header>
     <main id="index">
     </main>
